[package]
name = "advent-of-code-2018"
version = "0.1.0"
authors = ["Konrad Borowski <konrad@borowski.pw>"]
edition = "2018"

[dependencies]
arraymap = "0.1.1"
itertools = "0.7.11"
nom = "4.1.1"
num-complex = "0.2.1"
rayon = "1.0.3"
regex = "1.1.0"
structopt = "0.2.14"

[profile.test]
opt-level = 2

[profile.release]
lto = true
